test/fail_compilation/fail22.d
// infinite loop on DMD0.080

void main()
{
   char[] bug = "Crash";
   foreach(char ; bug){}
}

